tests/spec/emit/snapshots/newtype_nested_field_assign_eval_order.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  struct Inner { x: int }
  struct Wrap(Inner)
  
  fn bump(i: mut Ref<int>) -> int {
    i.* = i.* + 1
    i.*
  }
  
  fn main() {
    let mut items = [Wrap(Inner { x: 0 })]
    let mut i = 0
    let mut inner = items[i].0
    inner.x = if true { bump(&i) } else { 0 }
    items[i] = Wrap(inner)
    let _ = items
  }
---
package main

type Inner struct {
	x int
}

type Wrap Inner

func bump(i *int) int {
	*i++
	return *i
}

func main() {
	items := []Wrap{Wrap(Inner{x: 0})}
	i := 0
	inner := Inner(items[i])
	var tmp int
	if true {
		tmp = bump(&i)
	} else {
		tmp = 0
	}
	inner.x = tmp
	items[i] = Wrap(inner)
	_ = items
}
