tests/spec/emit/snapshots/newtype_nested_field_assign_expr_position.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  struct Inner { x: int }
  struct Wrap(Inner)
  
  fn main() {
    let mut w = Wrap(Inner { x: 0 })
    let mut inner = w.0
    let _ = { inner.x = 1 }
    w = Wrap(inner)
    let _ = w.0.x
  }
---
package main

type Inner struct {
	x int
}

type Wrap Inner

func main() {
	w := Wrap(Inner{x: 0})
	inner := Inner(w)
	inner.x = 1
	w = Wrap(inner)
	_ = Inner(w).x
}
