tests/spec/emit/snapshots/newtype_nested_field_assignment.snap
---
source: tests/spec/emit/types.rs
description: "input: \nstruct Inner { x: int }\nstruct Wrap(Inner)\n\nfn main() {\n  let mut w = Wrap(Inner { x: 1 })\n  let mut inner = w.0\n  inner.x = 2\n  w = Wrap(inner)\n}\n"
---
package main

type Inner struct {
	x int
}

type Wrap Inner

func main() {
	w := Wrap(Inner{x: 1})
	inner := Inner(w)
	inner.x = 2
	w = Wrap(inner)
}
