tests/spec/emit/snapshots/newtype_nested_field_ref.snap
---
source: tests/spec/emit/expressions.rs
description: "input: \nstruct Inner { x: int }\nstruct Wrap(Inner)\n\nfn main() {\n  let mut w = Wrap(Inner { x: 1 })\n  let inner = w.0\n  let r = &inner.x\n  let _ = r\n}\n"
---
package main

type Inner struct {
	x int
}

type Wrap Inner

func main() {
	w := Wrap(Inner{x: 1})
	inner := Inner(w)
	r := &inner.x
	_ = r
}
