tests/spec/emit/snapshots/newtype_nested_tuple_field_assignment.snap
---
source: tests/spec/emit/expressions.rs
description: "input: \nstruct Pair(int, int)\nstruct Wrap(Pair)\n\nfn main() {\n  let mut w = Wrap(Pair(0, 0))\n  let mut p = w.0\n  p.1 = 9\n  w = Wrap(p)\n  let _ = w.0.1\n}\n"
---
package main

type Pair struct {
	F0 int
	F1 int
}

type Wrap Pair

func main() {
	w := Wrap(Pair{
		F0: 0,
		F1: 0,
	})
	p := Pair(w)
	p.F1 = 9
	w = Wrap(p)
	_ = Pair(w).F1
}
