tests/spec/emit/snapshots/newtype_over_receive_only_channel_field_access.snap
---
source: tests/spec/emit/types.rs
description: |
  
  struct Ticks(Receiver<int>)
  
  fn test(t: Ticks) -> Receiver<int> {
    t.0
  }
---
package main

type Ticks <-chan int

func test(t Ticks) <-chan int {
	return (<-chan int)(t)
}
