tests/spec/emit/snapshots/newtype_over_receive_only_channel_pattern_match.snap
---
source: tests/spec/emit/patterns.rs
description: |
  
  struct Ticks(Receiver<int>)
  
  fn test(t: Ticks) -> Receiver<int> {
    match t {
      Ticks(r) => r,
    }
  }
---
package main

type Ticks <-chan int

func test(t Ticks) <-chan int {
	return (<-chan int)(t)
}
