tests/spec/emit/snapshots/newtype_over_ref_pointer_cast.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  struct Wrap(Ref<int>)
  
  fn main() {
    let mut x = 1
    let w = Wrap(&x)
    let r = w.0
    let _ = r.*
  }
---
package main

type Wrap *int

func main() {
	x := 1
	w := Wrap(&x)
	r := (*int)(w)
	_ = *r
}
